feat: setup landing page

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,7 +1,76 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
   padding: 0;
   box-sizing: border-width;
   text-align: center;
+}
+
+main.landing {
+  max-width: 100ch;
+  line-height: 1.7;
+  display: flex;
+  flex-direction: column;
+  padding: 5px 10px;
+  gap: 20px;
+
+  fieldset {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 5px;
+
+    label {
+      display: flex;
+      flex-wrap: nowrap;
+      gap: 5px;
+      width: 100%;
+
+      input {
+        flex: 1;
+      }
+    }
+
+    button {
+      width: fit-content;
+      align-self: center;
+    }
+  }
+}
+
+a {
+  color: pink;
+  font-size: larger;
+  padding: 2px;
+  border: 1px solid white;
+}
+a:hover {
+  color: white;
+  text-shadow: 1px 1px 1px 1px pink;
+}
+
+.pay-attention {
+  font-size: larger;
+  font-weight: bold;
+}
+
+.cat-display {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 7px;
+
+  button {
+    padding: 1px;
+    flex: 1;
+    display: flex;
+    img {
+      margin: auto auto;
+      aspect-ratio: 2/3;
+      max-width: 200px;
+      min-width: 100px;
+      width: calc(calc(100% - 35px) / 5);
+      flex: 1;
+    }
+  }
 }
