feat: complete harder level

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -74,6 +74,10 @@ a:hover {
       flex: 1;
     }
   }
+  button:active > img {
+    filter: brightness(1.75);
+    transform: translateY(4px);
+  }
 }
 
 .cat-display.end {
