--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,7 +1,7 @@
 #root {
   margin: 0 auto;
   padding: 0;
-  box-sizing: border-width;
+  box-sizing: border-box;
   text-align: center;
 }
 
@@ -90,7 +90,7 @@ dl {
   display: flex;
   flex-direction: row;
   border: 2px double #c89e9e;
-  width: 50%;
+  width: auto;
   justify-content: center;
   align-items: center;
   margin: 5px auto;
